--- a/src/styles/common/variables.less
+++ b/src/styles/common/variables.less
@@ -2,6 +2,9 @@
  * Component:	Variables
  * Description:	Define all variables
 */
+// scale rem to adapt sui
+@suiremscale: 5;
+
 //======== 【iconfont】 ========
 @iconfont-inlay: 'YDUI-INLAY';
 
