--- a/src/styles/common/variables.less
+++ b/src/styles/common/variables.less
@@ -11,8 +11,8 @@
 //======== 【global】 ========
 @base-zindex: 1;
 @body-bg: #F5F5F5;
-@body-padding-vertical: .24rem;
-@body-padding-bottom: .5rem;
+@body-padding-vertical: .24rem*@suiremscale;
+@body-padding-bottom: .5rem*@suiremscale;
 @line-color: #D9D9D9;
 @line-high-color: #B2B2B2;
 @max-width: 750px;
@@ -20,13 +20,13 @@
 
 //======== 【button】 ========
 @btn-radius: 3px;
-@btn-fontsize: .26rem;
-@btn-height: .6rem;
+@btn-fontsize: .26rem*@suiremscale;
+@btn-height: .6rem*@suiremscale;
 @btn-default-color: #FFF;
 @btn-block-radius: 3px;
-@btn-block-fontsize: .36rem;
-@btn-block-height: 1rem;
-@btn-block-margin-top: .5rem;
+@btn-block-fontsize: .36rem*@suiremscale;
+@btn-block-height: 1rem*@suiremscale;
+@btn-block-margin-top: .5rem*@suiremscale;
 @btn-primary-bg: #04BE02;
 @btn-danger-bg: #EF4F4F;
 @btn-warning-bg: #FFB400;
@@ -37,57 +37,57 @@
 @btn-hollow-border-color: #EAEAEA;
 
 //======== 【cell】 ========
-@cell-title-fontsize: .3rem;
+@cell-title-fontsize: .3rem*@suiremscale;
 @cell-title-color: #888;
-@cell-height: 1rem;
+@cell-height: 1rem*@suiremscale;
 @cell-left-color: #333;
-@cell-left-fontsize: .3rem;
+@cell-left-fontsize: .3rem*@suiremscale;
 @cell-right-color: #525252;
-@cell-right-fontsize: .26rem;
+@cell-right-fontsize: .26rem*@suiremscale;
 @cell-input-color: #555;
-@cell-input-fontsize: .3rem;
-@cell-icon-fontsize: .42rem;
+@cell-input-fontsize: .3rem*@suiremscale;
+@cell-icon-fontsize: .42rem*@suiremscale;
 @cell-select-color: #A9A9A9;
 @cell-select-fontsize: @cell-left-fontsize;
 @cell-arrow-color: #C9C9C9;
-@cell-arrow-fontsize: .34rem;
+@cell-arrow-fontsize: .34rem*@suiremscale;
 
 //======== 【grids】 ========
-@grids-fontsize: .28rem;
+@grids-fontsize: .28rem*@suiremscale;
 @grids-color: #333;
 @grids-bg: #FFF;
-@grids-padding-horizontal: .35rem;
+@grids-padding-horizontal: .35rem*@suiremscale;
 @grids-line-color: @line-color;
 @grids-line-high-color: @line-high-color;
 
 //======== 【navbar】 ========
-@navbar-height: .9rem;
+@navbar-height: .9rem*@suiremscale;
 @navbar-center-width: 50%;
-@navbar-item-fontsize: .3rem;
-@navbar-icon-fontsize: .36rem;
+@navbar-item-fontsize: .3rem*@suiremscale;
+@navbar-icon-fontsize: .36rem*@suiremscale;
 @navbar-border-color: #B2B2B2;
 
 //======== 【tabbar】 ========
 @tabbar-bg: rgba(255, 255, 255, .96);
 @tabbar-border-color: #B2B2B2;
-@tabbar-icon-fontsize: .54rem;
+@tabbar-icon-fontsize: .54rem*@suiremscale;
 
 //======== 【actionsheet】 ========
 @actionsheet-bg: #EFEFF4;
-@actionsheet-item-height: 1rem;
+@actionsheet-item-height: 1rem*@suiremscale;
 @actionsheet-item-bg: #FFF;
-@actionsheet-item-fontsize: .28rem;
+@actionsheet-item-fontsize: .28rem*@suiremscale;
 @actionsheet-item-color: #555;
 @actionsheet-item-border-color: @line-color;
-@actionsheet-action-height: 1rem;
+@actionsheet-action-height: 1rem*@suiremscale;
 @actionsheet-action-bg: @actionsheet-item-bg;
 @actionsheet-action-fontsize: @actionsheet-item-fontsize;
 @actionsheet-action-color: @actionsheet-item-color;
 
 //======== 【tab】 ========
 @tab-bg: #FFF;
-@tab-height: .85rem;
-@tab-fontsize: .28rem;
+@tab-height: .85rem*@suiremscale;
+@tab-fontsize: .28rem*@suiremscale;
 @tab-color: #585858;
 @tab-active-color: #FF5E53;
 @tab-break-color: @line-color;
