--- a/src/styles/components/actionsheet.less
+++ b/src/styles/components/actionsheet.less
@@ -32,7 +32,7 @@
 
 .actionsheet-action {
   display: block;
-  margin-top: .15rem;
+  margin-top: .15rem*@suiremscale;
   font-size: @actionsheet-action-fontsize;
   color: @actionsheet-action-color;
   height: @actionsheet-action-height;
