--- a/src/styles/components/badge.less
+++ b/src/styles/components/badge.less
@@ -46,7 +46,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    border-radius: 1rem;
+    border-radius: 1rem*@suiremscale;
     transform-origin: 0 0;
     transform: scale(.5);
   }
