--- a/src/styles/components/button.less
+++ b/src/styles/components/button.less
@@ -17,7 +17,7 @@
   height: @btn-height;
   font-size: @btn-fontsize;
   display: inline-block;
-  padding: 0 .2rem;
+  padding: 0 .2rem*@suiremscale;
   box-sizing: content-box;
   border-radius: @btn-radius;
 }
