--- a/src/styles/components/dialog.less
+++ b/src/styles/components/dialog.less
@@ -178,10 +178,10 @@
   left: 0;
   width: 100%;
   background-color: rgba(40, 40, 40, .8);
-  line-height: .28rem;
-  font-size: .26rem;
+  line-height: .28rem*@suiremscale;
+  font-size: .26rem*@suiremscale;
   color: #FFF;
-  padding: .3rem .24rem;
+  padding: .3rem*@suiremscale .24rem*@suiremscale;
   opacity: 0;
   animation: notify-downin .2s linear forwards;
   word-break: break-all;
