--- a/src/styles/components/cityselect.less
+++ b/src/styles/components/cityselect.less
@@ -33,7 +33,7 @@
 
 .cityselect-title {
   width: 100%;
-  font-size: .3rem;
+  font-size: .3rem*@suiremscale;
   text-align: center;
   height: 45px;
   line-height: 45px;
@@ -45,18 +45,18 @@
 
 .cityselect-nav {
   width: 100%;
-  padding-left: .2rem;
+  padding-left: .2rem*@suiremscale;
   overflow: hidden;
   display: flex;
   > a {
-    font-size: .26rem;
+    font-size: .26rem*@suiremscale;
     color: #222;
     display: block;
     height: 40px;
     line-height: 46px;
-    padding: 0 .2rem;
+    padding: 0 .2rem*@suiremscale;
     position: relative;
-    margin-right: .15rem;
+    margin-right: .15rem*@suiremscale;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -112,10 +112,10 @@
   width: 100%;
   height: inherit;
   display: block;
-  padding: 0 .4rem;
+  padding: 0 .4rem*@suiremscale;
   > a {
     color: #333;
-    font-size: .26rem;
+    font-size: .26rem*@suiremscale;
     height: 40px;
     line-height: 40px;
     overflow: hidden;
@@ -151,6 +151,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: .26rem;
+  font-size: .26rem*@suiremscale;
   color: #999;
 }
