--- a/src/styles/components/progressbar.less
+++ b/src/styles/components/progressbar.less
@@ -18,6 +18,6 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  font-size: .3rem;
+  font-size: .3rem*@suiremscale;
   transform: translate(-50%, -50%);
 }
