--- a/src/styles/components/rate.less
+++ b/src/styles/components/rate.less
@@ -17,7 +17,7 @@
   }
   .rate-text {
     color: #657180;
-    margin-left: .1rem;
-    font-size: .3rem;
+    margin-left: .1rem*@suiremscale;
+    font-size: .3rem*@suiremscale;
   }
 }
