--- a/src/styles/components/keyboard.less
+++ b/src/styles/components/keyboard.less
@@ -1,5 +1,4 @@
-@import "../common/variables";
-@import "../common/mixins";
+@import "../vm";
 
 .mask-keyboard {
   .mask(rgba(0, 0, 0, .4), @base-zindex * 500);
