--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -9,6 +9,7 @@
 @iconfont-inlay: 'YDUI-INLAY';
 
 //======== 【global】 ========
+@font-family: "PingFangSC-Regular", "PingFangSC", "Microsoft Yahei", arial, helvetica, sans-serif;
 @base-zindex: 1;
 @body-bg: #F5F5F5;
 @body-padding-vertical: .24rem*@suiremscale;
