--- a/src/styles/fixbug.less
+++ b/src/styles/fixbug.less
@@ -1,4 +1,4 @@
-/* 针对IOS 修复 css overflow scroll bug */
+// fix IOS css overflow scroll bug
 .g-fix-ios-overflow-scrolling-bug {
     -webkit-overflow-scrolling: auto !important;
 }
