--- a/src/styles/normalize.less
+++ b/src/styles/normalize.less
@@ -1,68 +1,66 @@
 *,
 *:before,
 *:after {
-  box-sizing: border-box;
-  outline: none;
+	box-sizing: border-box;
+	outline: none;
+}
+
+//  Prevent iOS and IE text size adjust after device orientation change, without disabling user zoom.
+html {
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
 }
 
 html, body {
-  height: 100%;
-}
-
-body {
-  background-color: @body-bg;
-  font-size: 12px;
-  -webkit-font-smoothing: antialiased;
-  font-family: arial, sans-serif;
+	height: 100%;
 }
 
 body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td, iframe {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 img, article, aside, details, figcaption, figure, footer, header, menu, nav, section, summary, time, mark, audio, video {
-  display: block;
-  margin: 0;
-  padding: 0;
+	display: block;
+	margin: 0;
+	padding: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-size: 100%;
+	font-size: 100%;
 }
 
 fieldset, img {
-  border: 0;
+	border: 0;
 }
 
 address, caption, cite, dfn, em, th, var, i, em {
-  font-style: normal;
-  font-weight: normal;
+	font-style: normal;
+	font-weight: normal;
 }
 
 ol, ul {
-  list-style: none;
+	list-style: none;
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
-  &:hover {
-    text-decoration: none;
-  }
+	text-decoration: none;
+	color: inherit;
+	&:hover {
+		text-decoration: none;
+	}
 }
 
 a, label, button, input, select {
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 input, select, button {
-  font: 100% tahoma, \5b8b\4f53, arial;
-  vertical-align: baseline;
-  border-radius: 0;
-  background-color: transparent;
-  -webkit-appearance: none;
-  -moz-appearance: none;
+	vertical-align: baseline;
+	border-radius: 0;
+	background-color: transparent;
+	-webkit-appearance: none;
+	-moz-appearance: none;
 }
 
 button::-moz-focus-inner,
@@ -70,30 +68,133 @@ input[type="reset"]::-moz-focus-inner,
 input[type="button"]::-moz-focus-inner,
 input[type="submit"]::-moz-focus-inner,
 input[type="file"] > input[type="button"]::-moz-focus-inner {
-  border: none;
+	border: none;
 }
 
 input[type=checkbox], input[type=radio] {
-  vertical-align: middle;
+	vertical-align: middle;
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none !important;
-  -moz-appearance: none !important;
-  margin: 0;
+	-webkit-appearance: none !important;
+	-moz-appearance: none !important;
+	margin: 0;
 }
 
 input:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0 1000px white inset;
+	-webkit-box-shadow: 0 0 0 1000px white inset;
 }
 
 textarea {
-  outline: none;
-  border-radius: 0;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  overflow: auto;
-  resize: none;
-  font: 100% tahoma, \5b8b\4f53, arial;
+	outline: none;
+	border-radius: 0;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	overflow: auto;
+	resize: none;
+}
+
+// Tables: Remove most spacing between table cells
+table {
+  	border-collapse: collapse;
+  	border-spacing: 0;
+}
+
+td, th {
+  	padding: 0;
+}
+
+// Address differences between Firefox and other browsers
+hr {
+  	box-sizing: content-box;
+  	height: 0;
+}
+
+// Contain overflow in all browsers.
+pre {
+  	overflow: auto;
+}
+
+// Known limitation: by default, Chrome and Safari on OS X allow very limited styling of `select`, unless a `border` property is set
+// 1. Correct color not being inherited Known issue: affects color of disabled elements
+// 2. Correct font properties not being inherited
+// 3. Address margins set differently in Firefox 4+, Safari, and Chrome
+button,
+input,
+optgroup,
+select,
+textarea {
+  	color: inherit; // 1
+  	font: inherit; // 2
+  	margin: 0; // 3
+}
+
+// Address inconsistent `text-transform` inheritance for `button` and `select`.
+// All other form control elements do not inherit `text-transform` values.
+// Correct `button` style inheritance in Firefox, IE 8/9/10/11, and Opera.
+// Correct `select` style inheritance in Firefox.
+button,
+select {
+  	text-transform: none;
+}
+
+// 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio` and `video` controls
+// 2. Correct inability to style clickable `input` types in iOS
+// 3. Improve usability and consistency of cursor style between image-type `input` and others
+button,
+html input[type="button"], // 1
+input[type="reset"],
+input[type="submit"] {
+  	-webkit-appearance: button; // 2
+  	cursor: pointer; // 3
+}
+
+// Re-set default cursor for disabled elements.
+button[disabled],
+html input[disabled] {
+  	cursor: default;
+}
+
+// Remove inner padding and border in Firefox 4+.
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  	border: 0;
+  	padding: 0;
+}
+
+// Address Firefox 4+ setting `line-height` on `input` using `!important` in the UA stylesheet
+input {
+  	line-height: normal;
+}
+
+// It's recommended that you don't attempt to style these elements.
+// Firefox's implementation doesn't respect box-sizing, padding, or width.
+// 1. Address box sizing set to `content-box` in IE 8/9/10.
+// 2. Remove excess padding in IE 8/9/10.
+input[type="checkbox"],
+input[type="radio"] {
+  	box-sizing: border-box;	// 1
+  	padding: 0; // 2
+}
+
+// Fix the cursor style for Chrome's increment/decrement buttons
+// For certain `font-size` values of the `input`, it causes the cursor style of the decrement button to change from `default` to `text`
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  	height: auto;
+}
+
+// 1. Address `appearance` set to `searchfield` in Safari and Chrome.
+// 2. Address `box-sizing` set to `border-box` in Safari and Chrome.
+input[type="search"] {
+  	-webkit-appearance: textfield; // 1
+  	box-sizing: content-box; // 2
+}
+
+// Remove inner padding and search cancel button in Safari and Chrome on OS X
+// Safari (but not Chrome) clips the cancel button when the search input has padding (and `textfield` appearance)
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+  	-webkit-appearance: none;
 }
