--- a/docs/example/styles/demo.less
+++ b/docs/example/styles/demo.less
@@ -5,408 +5,408 @@
 @suiremscale: 2.5;
 
 .demo-logo {
-  text-align: center;
-  img {
-    display: inline-block;
-    height: 1.8rem*@suiremscale;
-    padding: .5rem*@suiremscale 0 .4rem*@suiremscale;
-  }
+	text-align: center;
+	img {
+		display: inline-block;
+		height: 1.8rem*@suiremscale;
+		padding: .5rem*@suiremscale 0 .4rem*@suiremscale;
+	}
 }
 
 .demo-detail-title {
-  color: #888;
-  font-size: 0.28rem*@suiremscale;
-  margin-bottom: 0.5rem*@suiremscale;
-  font-weight: normal;
-  line-height: 0.42rem*@suiremscale;
-  text-align: center;
+	color: #888;
+	font-size: 0.28rem*@suiremscale;
+	margin-bottom: 0.5rem*@suiremscale;
+	font-weight: normal;
+	line-height: 0.42rem*@suiremscale;
+	text-align: center;
 }
 
 .demo-loading {
-  margin-bottom: 20px;
-  li {
-    a {
-      align-items: center;
-      justify-content: center;
-      display: flex;
-      overflow: hidden;
-      width: 100%;
-      height: 100%;
-    }
-    img {
-      width: .6rem*@suiremscale;
-      height: .6rem*@suiremscale;
-      display: inline-block;
-    }
-  }
+	margin-bottom: 20px;
+	li {
+		a {
+			align-items: center;
+			justify-content: center;
+			display: flex;
+			overflow: hidden;
+			width: 100%;
+			height: 100%;
+		}
+		img {
+			width: .6rem*@suiremscale;
+			height: .6rem*@suiremscale;
+			display: inline-block;
+		}
+	}
 }
 
 .demo-tip {
-  color: #B1B1B1;
-  font-size: .24rem*@suiremscale;
-  padding: .2rem*@suiremscale .24rem*@suiremscale .4rem*@suiremscale;
-  line-height: 18px;
-  font-family: @FONT-YAHEI;
-  position: relative;
-  &:after {
-    content: '';
-    position: absolute;
-    bottom: .2rem*@suiremscale;
-    left: 0;
-    width: 100%;
-    border-bottom: 1px dashed #B2B2B2;
-    transform: scaleY(.5);
-    transform-origin: 0 100%;
-  }
-  i {
-    margin-right: 3px;
-  }
-  a {
-    color: #5AA700;
-  }
+	color: #B1B1B1;
+	font-size: .24rem*@suiremscale;
+	padding: .2rem*@suiremscale .24rem*@suiremscale .4rem*@suiremscale;
+	line-height: 18px;
+	font-family: @FONT-YAHEI;
+	position: relative;
+	&:after {
+		content: '';
+		position: absolute;
+		bottom: .2rem*@suiremscale;
+		left: 0;
+		width: 100%;
+		border-bottom: 1px dashed #B2B2B2;
+		transform: scaleY(.5);
+		transform-origin: 0 100%;
+	}
+	i {
+		margin-right: 3px;
+	}
+	a {
+		color: #5AA700;
+	}
 }
 
 .demo-upload {
-  overflow: hidden;
-  li {
-    width: 1rem*@suiremscale;
-    height: 1rem*@suiremscale;
-    float: left;
-    margin-right: 0.2rem*@suiremscale;
-    &:last-child {
-      margin-right: 0;
-    }
-  }
+	overflow: hidden;
+	li {
+		width: 1rem*@suiremscale;
+		height: 1rem*@suiremscale;
+		float: left;
+		margin-right: 0.2rem*@suiremscale;
+		&:last-child {
+			margin-right: 0;
+		}
+	}
 }
 
 .demo-upload-big {
-  width: 2rem*@suiremscale;
-  height: 2rem*@suiremscale;
-  margin-top: 0.4rem*@suiremscale;
+	width: 2rem*@suiremscale;
+	height: 2rem*@suiremscale;
+	margin-top: 0.4rem*@suiremscale;
 }
 
 .demo-upload-rectangle {
-  width: 4rem*@suiremscale;
-  height: 2rem*@suiremscale;
-  margin-top: 0.4rem*@suiremscale;
+	width: 4rem*@suiremscale;
+	height: 2rem*@suiremscale;
+	margin-top: 0.4rem*@suiremscale;
 }
 
 .demo-components {
-  background-color: #FFF;
-  padding: 10px;
-  margin-bottom: 10px;
+	background-color: #FFF;
+	padding: 10px;
+	margin-bottom: 10px;
 }
 
 .demo-upload {
-  overflow: hidden;
-  li {
-    float: left;
-    img {
-      width: 1rem*@suiremscale;
-      height: 1rem*@suiremscale;
-      margin-right: .2rem*@suiremscale;
-    }
-  }
+	overflow: hidden;
+	li {
+		float: left;
+		img {
+			width: 1rem*@suiremscale;
+			height: 1rem*@suiremscale;
+			margin-right: .2rem*@suiremscale;
+		}
+	}
 }
 
 .demo-pitch {
-  margin-top: .5rem*@suiremscale;
+	margin-top: .5rem*@suiremscale;
 }
 
 .demo-small-pitch {
-  margin-top: .35rem*@suiremscale;
+	margin-top: .35rem*@suiremscale;
 }
 
 .demo-progressbar {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 0 .24rem*@suiremscale;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	padding: 0 .24rem*@suiremscale;
 }
 
 .demo-spinner {
-  background-color: #FFF;
-  padding: .24rem*@suiremscale;
+	background-color: #FFF;
+	padding: .24rem*@suiremscale;
 }
 
 .demo-spinner-tip {
-  font-size: .3rem*@suiremscale;
-  display: inline-block;
-  vertical-align: top;
-  color: #999;
-  margin-left: .2rem*@suiremscale;
+	font-size: .3rem*@suiremscale;
+	display: inline-block;
+	vertical-align: top;
+	color: #999;
+	margin-left: .2rem*@suiremscale;
 }
 
 .demo-spinner-title {
-  font-size: .26rem*@suiremscale;
-  color: #888;
-  display: block;
-  margin-bottom: .1rem*@suiremscale;
+	font-size: .26rem*@suiremscale;
+	color: #888;
+	display: block;
+	margin-bottom: .1rem*@suiremscale;
 }
 
 .demo-badege {
-  padding: 0 .24rem*@suiremscale .5rem*@suiremscale .24rem*@suiremscale;
-  background-color: #FFF;
-  .demo-badege-title {
-    font-size: .26rem*@suiremscale;
-    padding-top: .5rem*@suiremscale;
-    padding-bottom: .15rem*@suiremscale;
-    color: #777;
-    position: relative;
-    &:after {
-      content: '';
-      position: absolute;
-      z-index: 2;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 1px;
-      background-color: #D9D9D9;
-      border-bottom: 1px solid #D9D9D9;
-      transform: scaleY(.5);
-      transform-origin: 0 100%;
-    }
-  }
-  .badge {
-    margin-right: .1rem*@suiremscale;
-  }
+	padding: 0 .24rem*@suiremscale .5rem*@suiremscale .24rem*@suiremscale;
+	background-color: #FFF;
+	.demo-badege-title {
+		font-size: .26rem*@suiremscale;
+		padding-top: .5rem*@suiremscale;
+		padding-bottom: .15rem*@suiremscale;
+		color: #777;
+		position: relative;
+		&:after {
+			content: '';
+			position: absolute;
+			z-index: 2;
+			bottom: 0;
+			left: 0;
+			width: 100%;
+			height: 1px;
+			background-color: #D9D9D9;
+			border-bottom: 1px solid #D9D9D9;
+			transform: scaleY(.5);
+			transform-origin: 0 100%;
+		}
+	}
+	.vm-badge {
+		margin-right: .1rem*@suiremscale;
+	}
 }
 
 .demo-icons {
-  [class^="icon-"]:before, [class*=" icon-"]:before {
-    font-size: .6rem*@suiremscale;
-    color: #FF685D;
-  }
+	[class^="icon-"]:before, [class*=" icon-"]:before {
+		font-size: .6rem*@suiremscale;
+		color: #FF685D;
+	}
 }
 
 .demo-progress-line {
-  width: 100%;
+	width: 100%;
 }
 
 .demo-progress-cricle {
-  width: 2rem*@suiremscale;
-  height: 2rem*@suiremscale;
+	width: 2rem*@suiremscale;
+	height: 2rem*@suiremscale;
 }
 
 .nav-center .nav-title {
-  font-family: @FONT-YAHEI;
+	font-family: @FONT-YAHEI;
 }
 
 @demo-icons: 'demo-icons';
 
 @font-face {
-  font-family: @demo-icons;
-  src: url('//at.alicdn.com/t/font_o46g4z26c5pi7ldi.ttf') format('truetype');
+	font-family: @demo-icons;
+	src: url('//at.alicdn.com/t/font_o46g4z26c5pi7ldi.ttf') format('truetype');
 }
 
 [class^="demo-icons-"]:before, [class*=" demo-icons-"]:before {
-  font-family: @demo-icons;
-  font-size: .54rem*@suiremscale;
+	font-family: @demo-icons;
+	font-size: .54rem*@suiremscale;
 }
 
 .demo-icons-weixin:before {
-  content: '\e60b';
+	content: '\e60b';
 }
 
 .demo-icons-me:before {
-  content: '\e610';
+	content: '\e610';
 }
 
 .demo-icons-contact:before {
-  content: '\e60c';
+	content: '\e60c';
 }
 
 .demo-icons-discover:before {
-  content: '\e611';
+	content: '\e611';
 }
 
 .demo-icons-phone:before {
-  content: '\e60e';
-  color: #A6A5A5;
-  font-size: .42rem*@suiremscale;
+	content: '\e60e';
+	color: #A6A5A5;
+	font-size: .42rem*@suiremscale;
 }
 
 .demo-icons-tel:before {
-  content: '\e616';
-  color: #A6A5A5;
-  font-size: .42rem*@suiremscale;
+	content: '\e616';
+	color: #A6A5A5;
+	font-size: .42rem*@suiremscale;
 }
 
 .demo-icons-like:before {
-  content: '\e60d';
-  color: #A6A5A5;
-  font-size: .42rem*@suiremscale;
+	content: '\e60d';
+	color: #A6A5A5;
+	font-size: .42rem*@suiremscale;
 }
 
 .demo-icons-order:before {
-  content: '\e60f';
-  font-size: .42rem*@suiremscale;
-  color: #A6A5A5;
+	content: '\e60f';
+	font-size: .42rem*@suiremscale;
+	color: #A6A5A5;
 }
 
 .demo-icons-button:before {
-  content: '\e602';
-  color: #FF685E;
+	content: '\e602';
+	color: #FF685E;
 }
 
 .demo-icons-sendcode:before {
-  content: '\e60a';
-  color: #8B78E2;
+	content: '\e60a';
+	color: #8B78E2;
 }
 
 .demo-icons-dialog:before {
-  content: '\e603';
-  color: #3CC51E;
+	content: '\e603';
+	color: #3CC51E;
 }
 
 .demo-icons-keyboard:before {
-  content: '\e613';
-  color: #FC746C;
+	content: '\e613';
+	color: #FC746C;
 }
 
 .demo-icons-lazyimg:before {
-  content: '\e772';
-  color: #3CCD1C;
+	content: '\e772';
+	color: #3CCD1C;
 }
 
 .demo-icons-countup:before {
-  content: '\e77c';
-  color: #3CCD1C;
+	content: '\e77c';
+	color: #3CCD1C;
 }
 
 .demo-icons-rate:before {
-  content: '\e76e';
-  color: #FC746C;
+	content: '\e76e';
+	color: #FC746C;
 }
 
 .demo-icons-countdown:before {
-  content: '\e774';
-  color: #FF8D20;
+	content: '\e774';
+	color: #FF8D20;
 }
 
 .demo-icons-popup:before {
-  content: '\e777';
-  color: #8B78E2;
+	content: '\e777';
+	color: #8B78E2;
 }
 
 .demo-icons-cell:before {
-  content: '\e600';
-  color: #FC746C;
+	content: '\e600';
+	color: #FC746C;
 }
 
 .demo-icons-tabs:before {
-  content: '\e607';
-  color: #FF8D20;
+	content: '\e607';
+	color: #FF8D20;
 }
 
 .demo-icons-list:before {
-  content: '\e605';
-  color: #FF8D20;
+	content: '\e605';
+	color: #FF8D20;
 }
 
 .demo-icons-actionsheet:before {
-  content: '\e601';
-  color: #3CCD1C;
+	content: '\e601';
+	color: #3CCD1C;
 }
 
 .demo-icons-progressbar:before {
-  content: '\e612';
-  color: #FF8D20;
+	content: '\e612';
+	color: #FF8D20;
 }
 
 .demo-icons-icons:before {
-  content: '\e604';
-  color: #8B78E2;
+	content: '\e604';
+	color: #8B78E2;
 }
 
 .demo-icons-tabbar:before {
-  content: '\e606';
-  color: #3CC51E;
+	content: '\e606';
+	color: #3CC51E;
 }
 
 .demo-icons-badge:before {
-  content: '\e608';
-  color: #EF4F4F;
+	content: '\e608';
+	color: #EF4F4F;
 }
 
 .demo-icons-grids:before {
-  content: '\e609';
-  color: #8B78E2;
+	content: '\e609';
+	color: #8B78E2;
 }
 
 .demo-icons-slider:before {
-  content: '\e614';
-  color: #8B78E2;
+	content: '\e614';
+	color: #8B78E2;
 }
 
 .demo-icons-spinner:before {
-  content: '\e615';
-  color: #FF8D20;
+	content: '\e615';
+	color: #FF8D20;
 }
 
 .demo-icons-cityselect:before {
-  content: '\e617';
-  color: #FF685E;
+	content: '\e617';
+	color: #FF685E;
 }
 
 @demo-category-icons: 'demo-category-icons';
 
 @font-face {
-  font-family: @demo-category-icons;
-  src: url('//at.alicdn.com/t/font_1477296366_4593668.ttf') format('truetype');
+	font-family: @demo-category-icons;
+	src: url('//at.alicdn.com/t/font_1477296366_4593668.ttf') format('truetype');
 }
 
 [class^="demo-icons-category"]:before, [class*=" demo-icons-category"]:before {
-  font-family: @demo-category-icons;
-  font-size: .48rem*@suiremscale;
-  color: #5B5D5C;
+	font-family: @demo-category-icons;
+	font-size: .48rem*@suiremscale;
+	color: #5B5D5C;
 }
 
 .demo-icons-category1:before {
-  content: '\E604';
+	content: '\E604';
 }
 
 .demo-icons-category2:before {
-  content: '\E602';
+	content: '\E602';
 }
 
 .demo-icons-category3:before {
-  content: '\E605';
+	content: '\E605';
 }
 
 .demo-icons-category4:before {
-  content: '\E603';
+	content: '\E603';
 }
 
 .demo-icons-category5:before {
-  content: '\E607';
+	content: '\E607';
 }
 
 .demo-icons-category6:before {
-  content: '\E600';
+	content: '\E600';
 }
 
 .demo-icons-category7:before {
-  content: '\E606';
+	content: '\E606';
 }
 
 .demo-icons-category8:before {
-  content: '\E601';
+	content: '\E601';
 }
 
 .demo-countdown {
-  font-size: .24rem*@suiremscale;
-  span span {
-    font-size: 20px;
-  }
-  em {
-    display: inline-block;
-    background-color: #CCC;
-    margin-right: 2px;
-    padding: 2px;
-    font-size: .34rem*@suiremscale;
-  }
-  i {
-    font-size: 12px;
-  }
+	font-size: .24rem*@suiremscale;
+	span span {
+		font-size: 20px;
+	}
+	em {
+		display: inline-block;
+		background-color: #CCC;
+		margin-right: 2px;
+		padding: 2px;
+		font-size: .34rem*@suiremscale;
+	}
+	i {
+		font-size: 12px;
+	}
 }
