--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -6,7 +6,7 @@
 @suiremscale: 2.5;
 
 //======== 【iconfont】 ========
-@iconfont-inlay: 'YDUI-INLAY';
+@iconfont-inlay: 'VMUI-INLAY';
 
 //======== 【global】 ========
 @font-family: "PingFangSC-Regular", "PingFangSC", "Microsoft Yahei", arial, helvetica, sans-serif;
